--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/AdobePhotoshopExpress_.jpg" alt="" /></span>
 								<p>Hi My Name is Nhlanhla. Data Analyst that is self-motivated, has excellent organizational skills. Highly efficient and good eye for detail. Able to play a key role in analyzing problems and come up with insights.
 
 Now looking for a suitable data analyst position with an ambitious company.</p>
