--- a/index.html
+++ b/index.html
@@ -74,8 +74,18 @@ Now looking for a suitable data analyst position with an ambitious company.</p>
 								<li><a href="https://public.tableau.com/app/profile/nhlanhla8497" 									class="button">Learn more</a></li>
 								</ul>
 							</article>
+						
+							<article id="work">
+								<h2 class="major">Power Bi</h2>
+								<span class="image main"><img src="images/max.jpg" alt="" /></span>
+								<p>Power Bi visualization showing a breakdown of a survey</p>
+								<ul class="actions">
+								<li><a href="https://github.com/nhlekon/PowerBI/blob/main/Survey%20Breakdown%20Visual.pbix"
+								       class="button">View Project</a></li>
+								</ul>
+							</article>
 
-<article id="work">
+							<article id="work">
 								<h2 class="major">Python</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Python Project Coming Soon</p>
