--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@ Now looking for a suitable data analyst position with an ambitious company.</p>
 								<li><a href="https://github.com/nhlekon/Microsoft-Excel-Full-Project.git" class="button">View Project</a></li>
 								</ul>
 								
-							<article id="work">
+							<!--<article id="work">
 								<h2 class="major">Excel </h2>
 								<span class="image main"><img src="images/excel-logo.png" alt="" /></span>
 								<p>Excel Project Coming Soon</p>
 								<ul class="actions">
 								<li><a href="#"class="button">View Projects</a></li>
 								</ul>
-							</article
+							</article-->
 
 							</article>
 								<article id="work">
